--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
     <meta property="og:title" content="キスキルダッシュ！" />
     <meta
       property="og:image"
-      content="https://kisikildash.firebaseapp.com/assets/img/gallery/twittercard.jpg"
+      content="https://3zukie.github.io/KisikilDash/assets/img/gallery/twittercard.jpg"
     />
     <meta property="og:image:width" content="1280" />
     <meta property="og:image:height" content="670" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content=https://kisikildash.firebaseapp.com/>
+    <meta property="og:url" content="https://3zukie.github.io/KisikilDash/">
   </head>
   <body oncontextmenu="return false;">
     <title>キスキルダッシュ</title>
