upgrade ver0.8アップグレード　モンスター追加、ファビコン実装など

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
     <!-- Android用フルスクリーン -->
     <meta name="mobile-web-app-capable" content="yes" />
 
+    <!-- ファビコン用 -->
+    <link rel="shortcut icon" href="https://3zukie.github.io/KisikilDash/assets/img/favicons/favicon.ico">
+    <link rel="apple-touch-icon" href="https://3zukie.github.io/KisikilDash/assets/img/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="https://3zukie.github.io/KisikilDash/assets/img/favicons/android-chrome-256x256.png">
+
     <!-- SEO対策 -->
     <meta
       name="description"
@@ -74,6 +79,7 @@
     <script src="js/Objects/ObjectMysticalSpaceTyphoon.js"></script>
     <script src="js/Objects/ObjectGalleryMonster.js"></script>
 
+    <script src="js/Objects/MonsterObjects/ObjectAgido.js"></script>
     <script src="js/Objects/MonsterObjects/ObjectBitron.js"></script>
     <script src="js/Objects/MonsterObjects/ObjectCardcarD.js"></script>
     <script src="js/Objects/MonsterObjects/ObjectDarkResonator.js"></script>
@@ -82,6 +88,9 @@
     <script src="js/Objects/MonsterObjects/ObjectHalloHallo.js"></script>
     <script src="js/Objects/MonsterObjects/ObjectKuriboh.js"></script>
     <script src="js/Objects/MonsterObjects/ObjectMarshmallon.js"></script>
+    <script src="js/Objects/MonsterObjects/ObjectMysticTomato.js"></script>
+    <script src="js/Objects/MonsterObjects/ObjectPurely.js"></script>
+    <script src="js/Objects/MonsterObjects/ObjectSangan.js"></script>
     <script src="js/Objects/MonsterObjects/ObjectWingedKuriboh.js"></script>
   </body>
 </html>
