--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <meta name="mobile-web-app-capable" content="yes" />
 
     <!-- ファビコン用 -->
-    <link rel="shortcut icon" href="https://3zukie.github.io/KisikilDash/assets/img/favicons/favicon.ico">
-    <link rel="apple-touch-icon" href="https://3zukie.github.io/KisikilDash/assets/img/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="https://3zukie.github.io/KisikilDash/assets/img/favicons/android-chrome-256x256.png">
+    <link rel="shortcut icon" href="img/favicons/favicon.ico">
+    <link rel="apple-touch-icon" href="img/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="img/favicons/android-chrome-256x256.png">
 
     <!-- SEO対策 -->
     <meta
