upgrade モンスター追加、リザルト画像AB追加、ラフキル（サイズ要調整）追加

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
     <script src="js/Objects/MonsterObjects/ObjectMysticTomato.js"></script>
     <script src="js/Objects/MonsterObjects/ObjectPurely.js"></script>
     <script src="js/Objects/MonsterObjects/ObjectSangan.js"></script>
+    <script src="js/Objects/MonsterObjects/ObjectSnakeEyesPoplar.js"></script>
     <script src="js/Objects/MonsterObjects/ObjectWingedKuriboh.js"></script>
   </body>
 </html>
