upgrade バージョン0.95　
画面のチラ付きを修正　
クリボー5兄弟の実装　
ラフキルサイズ調整　
Sランク取得時背景の塗り忘れ対応

--- a/index.html
+++ b/index.html
@@ -86,7 +86,11 @@
     <script src="js/Objects/MonsterObjects/ObjectGateblocker.js"></script>
     <script src="js/Objects/MonsterObjects/ObjectGenexController.js"></script>
     <script src="js/Objects/MonsterObjects/ObjectHalloHallo.js"></script>
+    <script src="js/Objects/MonsterObjects/ObjectKuribah.js"></script>
+    <script src="js/Objects/MonsterObjects/ObjectKuribee.js"></script>
+    <script src="js/Objects/MonsterObjects/ObjectKuribeh.js"></script>
     <script src="js/Objects/MonsterObjects/ObjectKuriboh.js"></script>
+    <script src="js/Objects/MonsterObjects/ObjectKuriboo.js"></script>
     <script src="js/Objects/MonsterObjects/ObjectMarshmallon.js"></script>
     <script src="js/Objects/MonsterObjects/ObjectMysticTomato.js"></script>
     <script src="js/Objects/MonsterObjects/ObjectPurely.js"></script>
