upgrade ver1.0リリース モンスターの追加（ルビー、ウニ、アチチ、ハングリーバーガー） さらに難易度易化（レベルによるモンスターの制限、必要スコア減、モンスターの生成頻度減） 盗まれた際のアニメーション追加 レアモンスターの出現率を2%→0.8%に変更

--- a/index.html
+++ b/index.html
@@ -79,13 +79,17 @@
     <script src="js/Objects/ObjectMysticalSpaceTyphoon.js"></script>
     <script src="js/Objects/ObjectGalleryMonster.js"></script>
 
+    <script src="js/Objects/MonsterObjects/ObjectAchichiIgnister.js"></script>
     <script src="js/Objects/MonsterObjects/ObjectAgido.js"></script>
     <script src="js/Objects/MonsterObjects/ObjectBitron.js"></script>
     <script src="js/Objects/MonsterObjects/ObjectCardcarD.js"></script>
+    <script src="js/Objects/MonsterObjects/ObjectCrystalBeastRubyCarbuncle.js"></script>
     <script src="js/Objects/MonsterObjects/ObjectDarkResonator.js"></script>
     <script src="js/Objects/MonsterObjects/ObjectGateblocker.js"></script>
     <script src="js/Objects/MonsterObjects/ObjectGenexController.js"></script>
+    <script src="js/Objects/MonsterObjects/ObjectGunkanSushipUni.js"></script>
     <script src="js/Objects/MonsterObjects/ObjectHalloHallo.js"></script>
+    <script src="js/Objects/MonsterObjects/ObjectHungryBurger.js"></script>
     <script src="js/Objects/MonsterObjects/ObjectKuribah.js"></script>
     <script src="js/Objects/MonsterObjects/ObjectKuribee.js"></script>
     <script src="js/Objects/MonsterObjects/ObjectKuribeh.js"></script>
